--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         </header>
         <main>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos velit repellendus excepturi animi, esse pariatur numquam eius nesciunt! Quae, asperiores.
+
         </main>
+        <footer>
+        Deze website is opgezet door Tom Greuter en Webellion.
+        <a href="https://github.com/ludder/frontender-nl.git">Fork deze repo, voeg je eigen yaml toe en maak een PR als je toegevoegd wilt worden aan deze pagina.</a>
+        </footer>
     </body>
 </html>
