--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,40 @@
 <html>
-
-    <body>
-        <header>
-        <h1>Frontender.nl</h1>
-        <h2>Vind freelance frontend ontwikkelaars</h2>
-        </header>
-        <main>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos velit repellendus excepturi animi, esse pariatur numquam eius nesciunt! Quae, asperiores.
-        </main>
-        <footer>
-        Deze website is opgezet door Tom Greuter en Webellion.
-        <a href="https://github.com/ludder/frontender-nl.git">Fork deze repo, voeg je eigen yaml toe en maak een PR als je toegevoegd wilt worden aan deze pagina.</a>
-        </footer>
-    </body>
+  <head>
+    <title>Vind freelance frontend ontwikkelaars op frontender.nl</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&amp;display=swap"
+      rel="stylesheet"
+    />
+    <style type="text/css">
+      h1,
+      h2 {
+        font-family: "Liu Jian Mao Cao", cursive;
+        text-align: center;
+      }
+      h1 {
+        font-size: 3rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>frontender.nl</h1>
+      <h2>Vind freelance frontend ontwikkelaars</h2>
+    </header>
+    <main>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos
+      velit repellendus excepturi animi, esse pariatur numquam eius nesciunt!
+      Quae, asperiores.
+    </main>
+    <footer>
+      Deze website is opgezet door Tom Greuter en Webellion.
+      <a href="https://github.com/ludder/frontender-nl.git"
+        >Fork deze repo, voeg je eigen yaml toe en maak een PR als je toegevoegd
+        wilt worden aan deze pagina.</a
+      >
+    </footer>
+  </body>
 </html>
